--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_marginLeft="38dp"/>
 
     <ImageView
+        android:onClick="addCategory"
         android:id="@+id/imageView"
         android:layout_width="83dp"
         android:layout_height="80dp"
@@ -25,18 +26,18 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/R"
+        android:background="@drawable/add"
         android:clickable="true" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="604dp"
         android:layout_below="@+id/welcome"
+        android:id="@+id/category"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="17dp"
         android:layout_marginLeft="17dp"
-        />
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="17dp" />
 
 
 </RelativeLayout>
