--- a/app/src/main/res/layout/activity_modcat.xml
+++ b/app/src/main/res/layout/activity_modcat.xml
@@ -21,15 +21,15 @@
             />
 
         <TextView
+            android:id="@+id/txtClose"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:text="X"
-            android:layout_marginTop="7dp"
-            android:textStyle="bold"
-            android:textSize="22sp"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="7dp"
             android:gravity="left"
-            />
+            android:text="X"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
